prevent wrapping on taskRow cells with whitespace: nowrap in css. need to work out using text-overflow: elipsis in flexbox . . .

--- a/src/style.css
+++ b/src/style.css
@@ -318,28 +318,37 @@
   gap: 5px;
   border-bottom: solid 1px var(--darker-grey);
   padding: 20px 0 10px 0;
+    /* overflow: hidden; */
 }
 
 .task-cell {
-    display: flex;
+  display: flex;
   align-items: center;
-grid-area: task-cell
+  grid-area: task-cell;
+  white-space: nowrap;
+  /* overflow: hidden;
+  text-overflow: ellipsis;
+  min-width: 0; */
 }
 
 .notes-cell {
-    display: flex;
+  display: flex;
   align-items: center;
-grid-area: notes-cell;
+  grid-area: notes-cell;
+  text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .due-cell {
-    display: flex;
+  display: flex;
   align-items: center;
-grid-area: due-cell;
+  grid-area: due-cell;
+  text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .priority-cell {
-   display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 6px 0 6px;
@@ -347,6 +356,7 @@ grid-area: due-cell;
   font-weight:bolder;
   border-radius: 15px;
   border: 1px solid black;
+  width: 69px
 }
 
 .task-dueless {
